--- a/orchestration.service/orchestration.service.services/orchestration.service.services.csproj
+++ b/orchestration.service/orchestration.service.services/orchestration.service.services.csproj
@@ -4,4 +4,13 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="microsoft.extensions.hosting" Version="2.2.0" />
+    <PackageReference Include="RabbitMQ.Client" Version="5.1.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\orchestration.service.core\orchestration.service.core.csproj" />
+  </ItemGroup>
+
 </Project>
